--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,21 @@
-.section-title{
-    position: relative;
-    padding: 0px 10px;
+.section-title {
+  position: relative;
+  padding: 0px 10px;
 }
-.section-title::before{
-    content: '';
-    position: absolute;
-    width: 3px;
-    height: 100%;
-    background-color: yellow;
-    left: 0;
-    border-radius: 50px;
+.section-title::before {
+  content: "";
+  position: absolute;
+  width: 3px;
+  height: 100%;
+  background-color: yellow;
+  left: 0;
+  border-radius: 50px;
+}
+
+.paste-pin {
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
